--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hmf_fe",
-  "version": "0.1.0",
+  "name": "quanlybenhvien",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -55,7 +55,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
-    "react-dropzone": "^14.3.8",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
